# agent-canvas

./: .gitignore  AGENTS.md  BACKLOG.md  BUILD-SPEC-v0.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  decisions.md  intent.md  lessons.md  review-findings.md  status.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/agent-canvas-app/: Cargo.toml  tauri.conf.json
crates/agent-canvas-app/capabilities/: default.json
crates/agent-canvas-app/icons/: icon.icns
crates/agent-canvas-app/src/: main.rs
crates/agent-canvas-app/src/mcp/: mod.rs  notifications.rs  sessions.rs  tools.rs
crates/agent-canvas-mcp/: Cargo.toml
crates/agent-canvas-mcp/src/: main.rs
crates/vellum-app/: Cargo.toml  tauri.conf.json
crates/vellum-app/capabilities/: default.json
crates/vellum-app/src/: main.rs
crates/vellum-core/: Cargo.toml
crates/vellum-core/src/: lib.rs  save_flow.rs
crates/vellum-core/src/block/: mod.rs  patch.rs
crates/vellum-core/src/fs/: mod.rs
crates/vellum-core/src/hash/: mod.rs
crates/vellum-core/src/id/: mod.rs
crates/vellum-core/src/parse/: mod.rs  partition.rs
crates/vellum-core/src/sidecar/: mod.rs
crates/vellum-core/src/watch/: mod.rs
crates/vellum-core/tests/: save_integration.rs
crates/vellum-corpus/: Cargo.toml
crates/vellum-corpus/corpus/: atx-headings.md  autolinks-and-email.md  blockquotes-nested.md  bom-utf8.md  crlf-line-endings.md  entity-references.md  fence-3-backtick.md  fence-4-backtick.md  fence-5-backtick.md  fence-empty-info.md  fence-tilde.md  fence-with-info-string.md  footnote-definition.md  footnote-multiple.md  footnote-reference.md  frontmatter-empty.md  frontmatter-json.md  frontmatter-toml.md  frontmatter-yaml.md  hard-break-backslash.md  hard-break-trailing-spaces.md  headings-mixed.md  html-block-type1-script.md  html-block-type2-comment.md  html-block-type3-processing.md  html-block-type4-declaration.md  html-block-type5-cdata.md  html-block-type6-tag.md  html-block-type7-arbitrary.md  html-comment-between-blocks.md  html-comment-inline.md  indented-code-after-list.md  indented-code-standalone.md  inline-code-backticks.md  lazy-continuation-blockquote.md  lazy-continuation-list.md  link-ref-collapsed.md  link-ref-definition.md  link-ref-multiple.md  link-ref-with-title.md  (+25 more)
crates/vellum-corpus/src/: main.rs
docs/: BUILD-SPEC-v0.2-finish.md  BUILD-SPEC-v0.3-mcp.md  BUILD-SPEC-v0.3.md  BUILD-SPEC-v0.4.md  BUILD-SPEC-v0.5.md  PATCH-SPEC-v0.1.1.md  claude-md-template.md  mcp-clients.md  user-guide.md
docs/active/: codex-gap-scan-2026-05-19.md  codex-slice-watcher-v0.3-prompt.md  codex-slice1-report-2026-05-19.md  codex-slice1-v0.3-report-2026-05-20.md  codex-slice2-report-2026-05-19.md  codex-slice2-v0.3-prompt.md  codex-slice2-v0.3-report-2026-05-20.md  codex-slice3-report-2026-05-19.md  codex-slice3-v0.3-prompt.md  codex-slice3-v0.3-report-2026-05-20.md  codex-slice4-v0.3-prompt.md  codex-slice4-v0.3-report-2026-05-20.md  codex-slice4ext-report-2026-05-19.md  codex-slice5-v0.3-prompt.md  codex-slice5-v0.3-report-2026-05-21.md  codex-slice5a-report-2026-05-20.md  codex-slice5b-report-2026-05-20.md  codex-slice6-report-2026-05-20.md  codex-slice6-v0.3-prompt.md  codex-slice6-v0.3-report-2026-05-21.md  codex-slice7-v0.3-prompt.md  codex-slice7-v0.3-report-2026-05-21.md  codex-watcher-v0.3-report-2026-05-21.md  slice4-partial-report-2026-05-19.md
legacy/: vellum-spec-v0.3.md
prototypes/: index.html  prototype-A-main.html  prototype-B-html.html  prototype-C-edit-proposal.html  prototype-D-inbox-detail.html  prototype-E-agent-panel.html  prototype-F-project-mode.html  prototype-I-command-palette.html  prototype-K-keyboard-first.html  visual-system.md
scripts/: install-release.sh  launch-dev.sh
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  htmlBootstrap.ts  ipc.ts  styles.css
ui/src/components/: RenderedView.tsx  SourceView.tsx
ui/src/hooks/: useFocusTrap.ts
ui/src/pm/: blockIdsPlugin.ts  inlinePayload.ts  nodeviews.ts  primitivePayload.ts  schema.ts  sidecarBridge.ts
ui/src/types/: blocks.ts
