[workspace]
members = [
  "crates/vellum-core",
  "crates/agent-canvas-app",
  "crates/vellum-corpus",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Jesse Pike"]

[workspace.dependencies]
base64 = { version = "0.22" }
blake3 = { version = "1" }
libc = { version = "0.2" }
notify = { version = "6" }
pulldown-cmark = { version = "0.13" }
rmcp = { version = "1.6" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
similar = { version = "2" }
tauri = { version = "2", default-features = false }
tauri-build = { version = "2", default-features = false }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
tempfile = { version = "3" }
thiserror = { version = "1" }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = { version = "0.8" }
tracing = { version = "0.1" }
ts-rs = { version = "10" }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = { version = "2" }
