[package]
name = "agent-canvas-app"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, default-features = false, features = ["wry"] }
tauri-plugin-dialog.workspace = true
ts-rs.workspace = true
vellum-core = { path = "../vellum-core" }
uuid.workspace = true
walkdir.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "agent-canvas-app"
path = "src/main.rs"
