[package]
name = "agent-canvas-mcp"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "net", "rt-multi-thread", "time"] }

[[bin]]
name = "agent-canvas-mcp"
path = "src/main.rs"
