[package]
name = "vellum-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tauri = { workspace = true, default-features = false, features = ["wry"] }
vellum-core = { path = "../vellum-core" }

[build-dependencies]
tauri-build.workspace = true

[[bin]]
name = "vellum-app"
path = "src/main.rs"
