[package]
name = "vellum-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
